syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__use_declarations__tests__it_matches_complex_path.snap
---
source: syn-state-machine/src/common_tokens/use_declarations.rs
expression: "crate::parse::<Use>(::quote::quote! {\n            use\n            {\n                hello :: *, world :: hi as Hi, nested ::\n                { hello :: world, hi },\n            } ;\n        })"
---
Ok(
    (
        Use(
            Recursion {
                name: SimplePathOrNone {
                    leading_double_colon: false,
                    segments: [],
                },
                deep: [
                    Star(
                        SimplePathOrNone {
                            leading_double_colon: false,
                            segments: [
                                Id(
                                    Ident(
                                        hello,
                                    ),
                                ),
                            ],
                        },
                    ),
                    Standard(
                        SimplePath {
                            leading_double_colon: false,
                            segments: [
                                Id(
                                    Ident(
                                        world,
                                    ),
                                ),
                                Id(
                                    Ident(
                                        hi,
                                    ),
                                ),
                            ],
                        },
                        Some(
                            Ident(
                                Hi,
                            ),
                        ),
                    ),
                    Recursion {
                        name: SimplePathOrNone {
                            leading_double_colon: false,
                            segments: [
                                Id(
                                    Ident(
                                        nested,
                                    ),
                                ),
                            ],
                        },
                        deep: [
                            Standard(
                                SimplePath {
                                    leading_double_colon: false,
                                    segments: [
                                        Id(
                                            Ident(
                                                hello,
                                            ),
                                        ),
                                        Id(
                                            Ident(
                                                world,
                                            ),
                                        ),
                                    ],
                                },
                                None,
                            ),
                            Standard(
                                SimplePath {
                                    leading_double_colon: false,
                                    segments: [
                                        Id(
                                            Ident(
                                                hi,
                                            ),
                                        ),
                                    ],
                                },
                                None,
                            ),
                        ],
                    },
                ],
            },
        ),
        0,
    ),
)
