syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__use_declarations__tests__it_matches_simple_path.snap
---
source: syn-state-machine/src/common_tokens/use_declarations.rs
expression: "crate::parse::<Use>(::quote::quote! { use hello :: world ; })"
---
Ok(
    (
        Use(
            Standard(
                SimplePath {
                    leading_double_colon: false,
                    segments: [
                        Id(
                            Ident(
                                hello,
                            ),
                        ),
                        Id(
                            Ident(
                                world,
                            ),
                        ),
                    ],
                },
                None,
            ),
        ),
        0,
    ),
)
