syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__use_declarations__tests__it_matches_star_path.snap
---
source: syn-state-machine/src/common_tokens/use_declarations.rs
expression: "crate::parse::<UseDeclaration>(::quote::quote! { use hello :: * ; })"
---
Ok(
    (
        UseDeclaration(
            Star(
                SimplePathOrNone {
                    leading_double_colon: false,
                    segments: [
                        Id(
                            Ident(
                                hello,
                            ),
                        ),
                    ],
                },
            ),
        ),
        0,
    ),
)
